@@ -7,7 +7,7 @@ class Choice < ActiveRecord::Base
   scope :search, lambda { |*args| { conditions: [ 'LOWER(name) LIKE ? or LOWER(category) LIKE ?', '%' + args.first.downcase.split(' ').join('%') + '%', '%' + args.first.downcase.split(' ').join('%') + '%' ] } }
 
   # Model Validation
-  validates_presence_of :name, :category
+  validates_presence_of :name, :category, :user_id
   validates_uniqueness_of :name, scope: :category
 
   # Model Relationships
